# rpsump

./: .env.default  .env.dist  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile-old  Dockerfile-old2  Makefile  README.md  deploy.sh  docker-compose.yml  rpsump.db
.github/workflows/: coverage.yml  test.yml
config/: default.toml
deploy/: .env.swag.dist  deploy-prod.sh  rpsump.conf
deploy/config/fail2ban/: jail.local
deploy/config/fail2ban/filter.d/: nginx-rpsump-auth.conf
deploy/config/nginx/site-confs/: default.conf  rpsump.conf
migrations/2023-04-16-015238_create_sump_event/: down.sql  up.sql
migrations/2023-04-16-015238_create_sump_events/: down.sql  up.sql
migrations/2023-04-19-180052_create_user/: up.sql
migrations/2023-05-04-231925_create_user_event/: up.sql
migrations/2023-09-24-054630_create_irrigation_models/: down.sql  up.sql
migrations/2026-03-28-000000_create_refresh_token/: up.sql
src/: application.rs  auth.rs  board.rs  config.rs  database.rs  debounce.rs  lib.rs  main.rs  message.rs  models.rs  schema.rs  startup.rs  sump.rs  util.rs
src/auth/: authenticated_user.rs  claim.rs  email_verification_token.rs  mod.rs  password.rs  password_reset_token.rs  reset_token.rs  token.rs
src/config/: config.rs  default.toml
src/controllers/: heater.rs  info.rs  mod.rs  pool_pump.rs  sump_event.rs
src/controllers/auth/: email_verification.rs  helpers.rs  login.rs  logout.rs  mod.rs  refresh.rs  reset_password.rs  signup.rs  validate_password.rs
src/controllers/irrigation/: event.rs  mod.rs  schedule.rs
src/email/: mod.rs  sendinblue.rs
src/hydro/: control.rs  debounce.rs  gpioo.rs  heater.rs  irrigator.rs  message.rs  mod.rs  pool_pump.rs  pump.rs  sensor.rs  signal.rs  sump.rs
src/hydro/gpio/: mod.rs  rppal.rs  stubb.rs
src/hydro/gpio/stub/: gpio.rs  input_pin.rs  level.rs  mod.rs  output_pin.rs  pin.rs  trigger.rs
src/hydro/schedule/: check.rs  mod.rs  run.rs
src/hydro/sensor/: high_sump.rs  low_irrigator.rs  low_sump.rs  mod.rs
src/middleware/: mod.rs  rate_limiter.rs  telemetry.rs
src/models/: irrigation_event.rs  irrigation_schedule.rs  mod.rs  rfc3339.rs  sump_event.rs  user.rs  user_event.rs
src/repository/: implementation.rs  mod.rs
src/repository/models/: irrigation_event.rs  irrigation_schedule.rs  mod.rs  refresh_token.rs  sump_event.rs  user.rs  user_event.rs
src/sump/: control.rs  debounce.rs  mod.rs  schedule.rs  sensor.rs
src/sump/schedule/: mod.rs  run.rs
src/test_fixtures/: gpio.rs  hydro.rs  irrigation.rs  mod.rs  settings.rs
src/test_fixtures/irrigation/: event.rs  irrigator.rs  mod.rs  schedule.rs  status.rs  status_query.rs
src/test_fixtures/sump/: status.rs
tests/: mod.rs
tests/auth/: authenticated_user.rs  claim.rs  mod.rs  password.rs  token.rs
tests/common/: mod.rs  test_app.rs
tests/common/fixtures/: irrigation_event.rs  irrigation_schedule.rs  mod.rs  sump_event.rs
tests/controllers/: heater.rs  info.rs  mod.rs  pool_pump.rs  sump_event.rs
tests/controllers/auth/: email_verification.rs  login.rs  logout.rs  mod.rs  reset_password.rs  signup.rs
tests/controllers/irrigation/: event.rs  schedule.rs
tests/hydro/: debounce.rs  irrigation.rs  mod.rs
tests/sump/: control.rs  debounce.rs  irrigation.rs  mod.rs
