[package]
name = "rpsump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Development tools
anyhow = "1.0"
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde"] }
ctrlc = "3.2.5"
dotenv = "0.15.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.18.0"
validator = { version = "0.16.0", features = ["derive"] }
url = "2.2.0"
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP server
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"

# Hardware
rppal = "0.14.1"

# Database
diesel = { version = "2.0.3", features = [
  "chrono",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
] }
diesel-derive-enum = { version = "2.0.1", features = ["sqlite"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }

# Telemetry
actix-web-opentelemetry = "0.13.0"
opentelemetry = { version = "0.18.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = [
  "tonic",
  "tls",
  "tls-roots",
] }
opentelemetry_sdk = "0.18.0"
rstest = { version = "0.20.0", optional = true }
tonic = { version = "0.8.2", features = ["tls"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "registry",
] }

[dev-dependencies]
clippy = "0.0.302"
env_logger = "0.10.0"
lazy_static = "1.4.0"
linkify = "0.9.0"
once_cell = "1.17.1"
tempfile = "3.5.0"
wiremock = "0.5.18"
