[package]
name = "rpsump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Development tools
anyhow = "1.0"
async-trait = "0.1.77"
bcrypt = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
ctrlc = "3.2.5"
dotenv = "0.15.0"
futures = "0.3.28"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.23.1"
validator = { version = "0.18.1", features = ["derive"] }
url = "2.2.0"
uuid = { version = "1", features = ["v4", "serde"] }
actix-cors = "0.7.0"
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.3.1"

# Hardware
rppal = "0.17.0"

# Database
diesel = { version = "2.1.4", features = [
  "chrono",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
] }
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }

# Telemetry
actix-web-opentelemetry = "0.16.0"
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "tls-roots"] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
tonic = { version = "0.9.2", features = ["tls"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "registry",
] }

# Testing
mockall = "0.12.1"
rstest = { version = "0.18.2" }
thiserror = "1.0.56"

[dev-dependencies]
clippy = "0.0.302"
env_logger = "0.10.0"
linkify = "0.10.0"
once_cell = "1.19.0"
tempfile = "3.5.0"
wiremock = "0.5.18"


[features]
stub = []
